@@ -18,7 +18,7 @@
  * along with this program; if not, see <http://www.gnu.org/licenses/>.
  */
 
-/* $Id: avatarsay.c,v 2.242 2008-10-20 09:15:57 akf Exp $ */
+/* $Id: avatarsay.c,v 2.243 2008-10-22 16:11:21 akf Exp $ */
 
 #ifndef _GNU_SOURCE
 #  define _GNU_SOURCE
@@ -245,10 +245,10 @@ help (void)
   puts (" -v, --version           show the version");
 #ifdef NO_PTY
   puts (" -t, --terminal          not supported on this system");
-  puts (" -x, -e, --execute       not supported on this system");
+  puts (" -x, --execute           not supported on this system");
 #else
   puts (" -t, --terminal          terminal mode (run a shell in balloon)");
-  puts (" -x, -e, --execute       execute program in balloon");
+  puts (" -x, --execute           execute program in balloon");
 #endif
   puts (" -b, --nocolor           no color allowed (black and white)");
   puts (" -w, --window            try to run the program in a window"
@@ -505,7 +505,7 @@ checkoptions (int argc, char **argv)
 	{0, 0, 0, 0}
       };
 
-      c = getopt_long (argc, argv, "+hvfFw1risE:luptxenb",
+      c = getopt_long (argc, argv, "+hvfFw1risE:luptxnb",
 		       long_options, &option_index);
 
       /* end of the options */
@@ -576,7 +576,6 @@ checkoptions (int argc, char **argv)
 	  break;
 
 	case 'x':		/* --execute */
-	case 'e':
 	  executable = AVT_TRUE;
 	  default_delay = 0;
 	  loop = AVT_FALSE;
@@ -2799,7 +2798,7 @@ main (int argc, char *argv[])
   exit (EXIT_SUCCESS);
 
   /* never executed, but kept in the code */
-  puts ("$Id: avatarsay.c,v 2.242 2008-10-20 09:15:57 akf Exp $");
+  puts ("$Id: avatarsay.c,v 2.243 2008-10-22 16:11:21 akf Exp $");
 
   return EXIT_SUCCESS;
 }
