@@ -1,9 +1,14 @@
+2008-10-22  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatarsay.c (help, checkoptions):
+	option -e reserved for different later use
+
 2008-10-20  Andreas K. Foerster  <info@akfoerster.de>
 
-	* avatarsay (process_script):
+	* avatarsay.c (process_script):
 	fix handling of initialisation
 
-	* avatar (avt_draw_balloon):
+	* avatar.c (avt_draw_balloon):
 	fix: update whole screen
 
 2008-10-13  Andreas K. Foerster  <info@akfoerster.de>
